fixtures/frontend/milestone-2/invalid/underapplied-domain-constructor/main.aivi
domain ResourceId A over A = {
    type A -> ResourceId A
    wrap
}

type Broken = ResourceId
